fix cell component `value` does  not wrap

--- a/src/components/cell/index.less
+++ b/src/components/cell/index.less
@@ -106,6 +106,8 @@ page {
     vertical-align: middle;
     text-align: var(--cell-value-text-align);
     color: var(--cell-value-color);
+    word-wrap: break-word;
+    word-break: break-all;
   }
 
   &__title,
